[metadata]
name = pyfawkes
version = 0.1.1
description = Apply mutation testing to a py.test suite
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MarkCBell/pyfawkes
author = Mark Bell
author_email = mcbell@illinois.edu
keywords =
    mutation testing
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Testing

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    pytest

[bdist_wheel]
universal = True
